--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 
     <title>Anthony Thomasson</title>
 
-    <!-- Bootstrap -->
+    <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <!-- Bootstrap Optional theme -->
+    <!-- BOOTSTRAP OPTIONAL THEME -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
-    
 
     <!-- HTML5 shim
     and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -25,17 +24,15 @@
   </head>
   <body>
 
-
-
-
+    <!-- FOOTER -->
     <footer>
       <button class="btn-start"><!--<img src="img/btn-start.png">--></button>
       <div class="toolbar"></div>
     </footer>
 
-    <!-- jQuery -->
+    <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Bootstrap JavaScript -->
+    <!-- BOOTSTRAP JAVASCRIPT -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <script src="js/custom.js"></script>
